# gsspp

./: CMakeLists.txt
include/gsspp/: gssapi_includes.h  gssbuffer.h  gsscontext.h  gsscredential.h  gssexception.h  gssmech.h  gssname.h
src/: CMakeLists.txt  gssbuffer.cpp  gsscontext.cpp  gsscredential.cpp  gssexception.cpp  gssmech.cpp  gssname.cpp
